--- a/index.html
+++ b/index.html
@@ -6,15 +6,11 @@
 	<link rel="stylesheet" type="text/css" href="style/style.css">
 	<script type="text/javascript" src="js/showdown-min.js"></script>
 	<script type="text/javascript" src="js/micro-tmpl.js"></script>
-	<script type="text/javascript" src="js/simple-ppt.js"></script>
+	<script type="text/javascript" src="js/markdown-ppt.js"></script>
 </head>
 <body>
 	<div id="process"><div id="current"></div></div>
 	<article id="main"></article>
-	<!-- <div id="info">
-		<p>→ next</p>
-		<p>← prev</p>
-	</div> -->
 	<script type="text/html" id="item_tmpl">
 		<section class="ppt_item <%=className%>">
 			<div class="content"><%=content%></div>
